Added new components (code)
Existing ones have been reallocated

--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -1,13 +1,22 @@
 item.warpdrive.crafting.Malformed.name=Bad Item
-item.warpdrive.crafting.EmptyCore.name=Empty Core
-item.warpdrive.crafting.TeleCore.name=Teleportation Core
-item.warpdrive.crafting.WarpCore.name=Warp Core
-item.warpdrive.crafting.LaserCore.name=Laser Core
+item.warpdrive.crafting.EmeraldCrystal.name=Emerald Tuned Crystal
+item.warpdrive.crafting.EnderCrystal.name=Ender Tuned Crystal
+item.warpdrive.crafting.DiamondCrystal.name=Diamond Tuned Crystal
+item.warpdrive.crafting.DiffrationGrating.name=Diffration Grating
 item.warpdrive.crafting.ReactorCore.name=Reactor Core
-item.warpdrive.crafting.InterfaceComputer.name=Computer Interface
-item.warpdrive.crafting.InterfacePower.name=Power Interface
-item.warpdrive.crafting.PowerCore.name=Energy Core
+item.warpdrive.crafting.ComputerInterface.name=Computer Interface
+item.warpdrive.crafting.PowerInterface.name=Power Interface
+item.warpdrive.crafting.CapacitiveCrystal.name=Capacitive Crystal
 item.warpdrive.crafting.AirCanisterEmpty.name=Empty Air Canister
+item.warpdrive.crafting.Lens.name=Lens
+item.warpdrive.crafting.Zoom.name=Zoom
+item.warpdrive.crafting.GlassTank.name=Glass Tank
+item.warpdrive.crafting.FlatScreen.name=Flat Screen
+item.warpdrive.crafting.MemoryCrystal.name=Memory Crystal
+item.warpdrive.crafting.Motor.name=Motor
+item.warpdrive.crafting.BoneCharcoal.name=Bone Charcoal
+item.warpdrive.crafting.ActivatedCarbon.name=Activated Carbon
+item.warpdrive.crafting.LaserMediumEmpty.name=Laser Medium (empty)
 
 item.warpdrive.energy.IC2reactorLaserFocus.name=IC2 Reactor Laser Focus
 item.warpdrive.armor.AirCanisterFull.name=Air Canister
