--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -178,3 +178,30 @@ tile.warpdrive.hull3.glass.brown.name=Brown Stained Superior Hull Glass
 tile.warpdrive.hull3.glass.green.name=Green Stained Superior Hull Glass
 tile.warpdrive.hull3.glass.red.name=Red Stained Superior Hull Glass
 tile.warpdrive.hull3.glass.black.name=Black Stained Superior Hull Glass
+
+
+warpdrive.guide.prefix=%1$s: 
+warpdrive.monitor.viewingCamera=Viewing camera at %2$d, %3$d, %4$d on video channel %1$d
+warpdrive.ship.attachedPlayers=Attached players: %1$s
+warpdrive.ship.playerAttached=You're now attached to ship %1$s.\nAttached players are %2$s
+warpdrive.ship.playerDetached=You've been detached from ship %1$s.\nAttached players are %2$s
+warpdrive.ship.statusLine.cooling=%1$d s left of cooldown.
+warpdrive.ship.statusLine.isolation=%1$d active isolation blocks providing %2$2.1f%% absorption.
+warpdrive.energy.statusLine=Energy level is %1$s/%2$s EU.
+warpdrive.beamFrequency.statusLine.valid=Beam frequency %1$d is valid. 
+warpdrive.beamFrequency.statusLine.invalid=§cBeam frequency %1$d is invalid!
+warpdrive.videoChannel.statusLine.valid=Video channel %1$d is valid. 
+warpdrive.videoChannel.statusLine.validCamera=Video channel %1$d is valid for camera at %2$d, %3$d, %4$d. 
+warpdrive.videoChannel.statusLine.invalid=§cVideo channel %1$d is invalid.
+warpdrive.videoChannel.statusLine.invalidOrNotLoaded=§cVideo channel %1$d is invalid or camera is too far away!
+warpdrive.cloakingCore.invalidAssembly=§cInvalid assembly!
+warpdrive.cloakingCore.disabled=Cloak is disabled
+warpdrive.cloakingCore.lowPower=§cCloak is down, we need more power Captain!
+warpdrive.cloakingCore.cloaking=A tier %1$d cloak is currently covering %2$d blocks!
+warpdrive.IC2reactorLaserMonitor.noReactor=No reactor found!
+warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d reactor(s) connected.
+warpdrive.transporter.status=From %1$.0f %2$.0f %3$.0f to %4$.0f %5$.0f %6$.0f
+
+
+
+
