--- a/src/main/resources/assets/warpdrive/lang/ru_RU.lang
+++ b/src/main/resources/assets/warpdrive/lang/ru_RU.lang
@@ -1,7 +1,15 @@
 death.attack.warpdrive.asphyxia=%s умер от удушья
 death.attack.warpdrive.asphyxia.player=%2$s убил %1$s с помощью удушья
+death.attack.warpdrive.cold=%s died from cold
+death.attack.warpdrive.cold.player=%1$s was frozen to death by %2$s 
+death.attack.warpdrive.laser=%s died from crossing the beam
+death.attack.warpdrive.laser.player=%1$s was laserified by %2$s
+death.attack.warpdrive.shock=%s was electrocuted
+death.attack.warpdrive.shock.player=%1$s was electrocuted by %2$s
 death.attack.warpdrive.teleportation=%s не пережил рематериализацию
 death.attack.warpdrive.teleportation.player=%2$s убил %1$s телепортацией
+death.attack.warpdrive.warm=%s died from excessive temperature
+death.attack.warpdrive.warm.player=%1$s was cooked by %2$s
 
 item.warpdrive.crafting.Malformed.name=Поврежденный предмет
 item.warpdrive.crafting.EmeraldCrystal.name=Изумрудный настраиваемый кристалл
