--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -21,7 +21,7 @@ item.warpdrive.crafting.ComputerInterface.name=Computer Interface
 item.warpdrive.crafting.PowerInterface.name=Power Interface
 item.warpdrive.crafting.CapacitiveCrystal.name=Capacitive Crystal
 item.warpdrive.crafting.AirCanisterEmpty.name=Empty Air Canister
-item.warpdrive.crafting.AirCanisterEmpty.tooltip=Right click an Air generator to fill me
+item.warpdrive.crafting.AirCanisterEmpty.tooltip=§bRight click an Air generator§7 to refill me
 item.warpdrive.crafting.Lens.name=Lens
 item.warpdrive.crafting.Zoom.name=Zoom
 item.warpdrive.crafting.GlassTank.name=Glass Tank
@@ -31,6 +31,8 @@ item.warpdrive.crafting.Motor.name=Motor
 item.warpdrive.crafting.BoneCharcoal.name=Bone Charcoal
 item.warpdrive.crafting.ActivatedCarbon.name=Activated Carbon
 item.warpdrive.crafting.LaserMediumEmpty.name=Laser Medium (empty)
+item.warpdrive.crafting.EMCProjector.name=EMC Projector
+item.warpdrive.crafting.CoilCrystal.name=Coil Crystal
 
 item.warpdrive.armor.AirCanisterFull.name=Air Canister
 item.warpdrive.armor.Helmet.name=Warp Helmet
@@ -38,13 +40,54 @@ item.warpdrive.armor.Helmet.name=Warp Helmet
 item.warpdrive.energy.IC2reactorLaserFocus.name=IC2 Reactor Laser Focus
 
 item.warpdrive.forcefield.shape.none.name=No shape
+item.warpdrive.forcefield.shape.none.tooltip=§4Invalid item
 item.warpdrive.forcefield.shape.sphere.name=Sphere shape
+item.warpdrive.forcefield.shape.sphere.tooltip=
 item.warpdrive.forcefield.shape.cylinder_h.name=Horizontal cylinder shape
+item.warpdrive.forcefield.shape.cylinder_h.tooltip=
 item.warpdrive.forcefield.shape.cylinder_v.name=Vertical cylinder shape
+item.warpdrive.forcefield.shape.cylinder_v.tooltip=
 item.warpdrive.forcefield.shape.cube.name=Cube shape
+item.warpdrive.forcefield.shape.cube.tooltip=
 item.warpdrive.forcefield.shape.plane.name=Plane shape
+item.warpdrive.forcefield.shape.plane.tooltip=
 item.warpdrive.forcefield.shape.tube.name=Tube shape
+item.warpdrive.forcefield.shape.tube.tooltip=
 item.warpdrive.forcefield.shape.tunnel.name=Tunnel shape
+item.warpdrive.forcefield.shape.tunnel.tooltip=
+
+item.warpdrive.forcefield.upgrade.none.name=No upgrade
+item.warpdrive.forcefield.upgrade.none.tooltip=§4Invalid item
+item.warpdrive.forcefield.upgrade.break.name=Block breaker upgrade
+item.warpdrive.forcefield.upgrade.break.tooltip=§4Not implemented\nBreak blocks instead of projecting a force field. Add more Block breaker upgrades to increase mining level.
+item.warpdrive.forcefield.upgrade.camouflage.name=Camouflage upgrade
+item.warpdrive.forcefield.upgrade.camouflage.tooltip=§4Work in progress\nDisguise force field into a custom block. Place a block on top of the upgraded relay to define the camouflage block. 
+item.warpdrive.forcefield.upgrade.cool.name=Cooling upgrade
+item.warpdrive.forcefield.upgrade.cool.tooltip=§4Work in progress\nFreeze blocks and entities. Add more Cool upgrades to boost effect. Add an Inversion for an area/terraforming effect.
+item.warpdrive.forcefield.upgrade.fusion.name=Fusion upgrade
+item.warpdrive.forcefield.upgrade.fusion.tooltip=Merge overlapping force fields sharing the same beam frequency network
+item.warpdrive.forcefield.upgrade.invert.name=Inversion upgrade
+item.warpdrive.forcefield.upgrade.invert.tooltip=§4Work in progress\nChange from surface to volume effect area. Use this for entity targeting or terraforming.
+item.warpdrive.forcefield.upgrade.mute.name=Muting upgrade
+item.warpdrive.forcefield.upgrade.mute.tooltip=§4Work in progress\nSilence the attached block
+item.warpdrive.forcefield.upgrade.pump.name=Pumping upgrade
+item.warpdrive.forcefield.upgrade.pump.tooltip=§4Not implemented\nPump fluids at the force field location. Add more Pump upgrades to pull fluid with higher viscosity fluids like lava.
+item.warpdrive.forcefield.upgrade.range.name=Range upgrade
+item.warpdrive.forcefield.upgrade.range.tooltip=Increase the projector maximum range
+item.warpdrive.forcefield.upgrade.rotation.name=Rotation upgrade
+item.warpdrive.forcefield.upgrade.rotation.tooltip=Enable force field rotation
+item.warpdrive.forcefield.upgrade.shock.name=Shock upgrade
+item.warpdrive.forcefield.upgrade.shock.tooltip=§4Work in progress\nElectrify blocks and entities. Add more Shock upgrades to boost effect. Add an Inversion for an area/terraforming effect.
+item.warpdrive.forcefield.upgrade.speed.name=Speed upgrade
+item.warpdrive.forcefield.upgrade.speed.tooltip=Increase force field projection speed
+item.warpdrive.forcefield.upgrade.stabilize.name=Stabilization upgrade
+item.warpdrive.forcefield.upgrade.stabilize.tooltip=§4Not implemented\nPlace blocks instead of projecting a force field
+item.warpdrive.forcefield.upgrade.thickness.name=Thickness upgrade
+item.warpdrive.forcefield.upgrade.thickness.tooltip=Increase force field thickness. Add more Thickness upgrades to increase effect, up to doubling.
+item.warpdrive.forcefield.upgrade.translation.name=Translation upgrade
+item.warpdrive.forcefield.upgrade.translation.tooltip=Enable force field translation
+item.warpdrive.forcefield.upgrade.warm.name=Heating upgrade
+item.warpdrive.forcefield.upgrade.warm.tooltip=§4Work in progress\nHeat up blocks and entities. Add more Warm upgrades to boost effect. Add an Inversion for an area/terraforming effect.
 
 item.warpdrive.upgrade.Power.name=Power Upgrade
 item.warpdrive.upgrade.Speed.name=Speed Upgrade
@@ -106,25 +149,19 @@ tile.warpdrive.energy.EnanReactorLaser.name=Enantiomorphic Reactor Stabilization
 tile.warpdrive.energy.EnergyBank.name=Anuic Energy Bank
 tile.warpdrive.energy.IC2ReactorLaserMonitor.name=IC2 Reactor Laser Monitor
 
-tile.warpdrive.forcefield.block.name=Forcefield
-tile.warpdrive.forcefield.projector1.name=Basic Forcefield Projector
-tile.warpdrive.forcefield.projector2.name=Advanced Forcefield Projector
-tile.warpdrive.forcefield.projector3.name=Superior Forcefield Projector
+tile.warpdrive.forcefield.block1.name=Basic Force Field Block
+tile.warpdrive.forcefield.block2.name=Advanced Force Field Block
+tile.warpdrive.forcefield.block3.name=Superior Force Field Block
+tile.warpdrive.forcefield.projector1.name=Basic Force Field Projector
+tile.warpdrive.forcefield.projector2.name=Advanced Force Field Projector
+tile.warpdrive.forcefield.projector3.name=Superior Force Field Projector
 
-tile.warpdrive.forcefield.upgrade.none.name=No upgrade
-tile.warpdrive.forcefield.upgrade.break.name=Block breaker upgrade
-tile.warpdrive.forcefield.upgrade.camouflage.name=Camouflage upgrade
-tile.warpdrive.forcefield.upgrade.cool.name=Cooling upgrade
-tile.warpdrive.forcefield.upgrade.fusion.name=Fusion upgrade
-tile.warpdrive.forcefield.upgrade.mute.name=Muting upgrade
-tile.warpdrive.forcefield.upgrade.range .name=Range  upgrade
-tile.warpdrive.forcefield.upgrade.rotation.name=Rotation upgrade
-tile.warpdrive.forcefield.upgrade.shock.name=Shock upgrade
-tile.warpdrive.forcefield.upgrade.speed.name=Speed upgrade
-tile.warpdrive.forcefield.upgrade.stabilize.name=Stabilization upgrade
-tile.warpdrive.forcefield.upgrade.thickness.name=Thickness upgrade
-tile.warpdrive.forcefield.upgrade.translation.name=Translation upgrade
-tile.warpdrive.forcefield.upgrade.warm.name=Heating upgrade
+tile.warpdrive.forcefield.relay1.name=Basic Force Field Relay
+tile.warpdrive.forcefield.relay1.tooltip=Supports up to 1 force field upgrade shared within its network
+tile.warpdrive.forcefield.relay2.name=Advanced Force Field Relay
+tile.warpdrive.forcefield.relay2.tooltip=Supports up to 1 force field upgrade shared within its network
+tile.warpdrive.forcefield.relay3.name=Superior Force Field Relay
+tile.warpdrive.forcefield.relay3.tooltip=Supports up to 1 force field upgrade shared within its network
 
 tile.warpdrive.movement.Lift.name=Lift
 tile.warpdrive.movement.ShipController.name=Ship Controller
@@ -250,6 +287,35 @@ warpdrive.ship.statusLine.isolation=%1$d active isolation blocks providing %2$2.
 warpdrive.energy.statusLine=Energy level is %1$s/%2$s EU.
 warpdrive.beamFrequency.statusLine.valid=Beam frequency %1$d is valid. 
 warpdrive.beamFrequency.statusLine.invalid=§cBeam frequency %1$d is invalid!
+
+warpdrive.forcefield.shape.statusLine.none=§cShape isn't defined.
+warpdrive.forcefield.shape.statusLine.double=Shape is a full %1$s
+warpdrive.forcefield.shape.statusLine.single=Shape is an half %1$s
+warpdrive.forcefield.shape.statusLine.sphere=sphere
+warpdrive.forcefield.shape.statusLine.cylinder_h=horizontal cylinder
+warpdrive.forcefield.shape.statusLine.cylinder_v=vertical cylinder
+warpdrive.forcefield.shape.statusLine.cube=cube
+warpdrive.forcefield.shape.statusLine.plane=plane
+warpdrive.forcefield.shape.statusLine.tube=tube
+warpdrive.forcefield.shape.statusLine.tunnel=tunnel
+
+warpdrive.forcefield.upgrade.statusLine.none=§cNo upgrade installed.
+warpdrive.forcefield.upgrade.statusLine.valid=Upgraded with %1$s
+warpdrive.forcefield.upgrade.statusLine.none=none
+warpdrive.forcefield.upgrade.statusLine.break=block breaking
+warpdrive.forcefield.upgrade.statusLine.camouflage=camouflage
+warpdrive.forcefield.upgrade.statusLine.cool=cooling
+warpdrive.forcefield.upgrade.statusLine.fusion=fusion
+warpdrive.forcefield.upgrade.statusLine.mute=muting
+warpdrive.forcefield.upgrade.statusLine.range=increased range
+warpdrive.forcefield.upgrade.statusLine.rotation=rotation
+warpdrive.forcefield.upgrade.statusLine.shock=shock
+warpdrive.forcefield.upgrade.statusLine.speed=speed
+warpdrive.forcefield.upgrade.statusLine.stabilize=stabilization
+warpdrive.forcefield.upgrade.statusLine.thickness=thickness
+warpdrive.forcefield.upgrade.statusLine.translation=translation
+warpdrive.forcefield.upgrade.statusLine.warm=heating
+
 warpdrive.videoChannel.statusLine.valid=Video channel %1$d is valid. 
 warpdrive.videoChannel.statusLine.validCamera=Video channel %1$d is valid for camera at %2$d, %3$d, %4$d. 
 warpdrive.videoChannel.statusLine.invalid=§cVideo channel %1$d is invalid.
